--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -15,7 +15,7 @@
 	padding:5px 15px;
 }
 .thumbnail-product:hover{
-	//box-shadow:0px 0px 10px #9d9d9d;
+	box-shadow:0px 0px 10px #9d9d9d;
 }
 .thumbnail-img-wrapper{
 	position:relative;
@@ -27,3 +27,9 @@
 }
 .price-block{ }
 .price{ margin:0 5px;}
+.product-name{
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+}
+.price.regular-price.strickeout{     text-decoration: line-through; }
