--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -1,19 +1,24 @@
 #main{
 	position:relative;
+	min-height:410px;
 }
-#main .spinner{
-	position:absolute;
+.spinner{
+	/*position:absolute;
 	left:0;top:0;right:0;bottom:0;margin: auto auto;
 	text-align:center;
-	font-style:italic;
+	font-style:italic; 
+	*/
+	position:absolute;left:50%;top:50%;
+	-webkit-transform:translate(-50%,-50%);
+	-moz-transform:translate(-50%,-50%);
 }
-#main .spinner img{ max-width:120px;max-height:120px; height:auto;width:auto;}
+.spinner img{ max-width:65px;max-height:65px; height:auto;width:auto;}
 
 .thumbnail-product{
 	margin: 10px auto;
 	border-bottom:1px solid #eaeaea;
 	padding:5px 15px;
-}
+} 
 .thumbnail-product:hover{
 	box-shadow:0px 0px 10px #9d9d9d;
 }
