--- a/app/backend/views/categories.html
+++ b/app/backend/views/categories.html
@@ -4,33 +4,37 @@
 	</div>
 </div>
 
-<div class="container">
-	<div class="alert alert-danger" ng-show="deletionSuccess">
-	  <strong>{{ deleteCount }} </strong> Categorie(s) deleted successfully!
+<div class="dataset">
+	<div class="container">
+		<div class="alert alert-danger" ng-show="deletionSuccess">
+		  <strong>{{ deleteCount }} </strong> Categorie(s) deleted successfully!
+		</div>
+		<div class="spinner" ng-show="loading"> <img src="../assets/images/loding.gif"  border="0" alt=""></div>
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th> <input type="checkbox" ng-model="selectAll" ng-click="checkAll()"  /> </th>
+					<th> Category Name </th>
+					<th> Active </th>
+					<th> Created @ </th>
+					<th> Updated @ </th>
+					<th> </th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="category in categories">
+					<td> <input type="checkbox" ng-model="category.selected" ng-click="checkIndividual()" /> </td>
+					<td> {{ category.name }} </td>
+					<td> {{ category.active | yesNo }} </td>
+					<td> {{ category.created_at | date:"MM/dd/yyyy 'at' h:mma"  }} </td>
+					<td> {{ category.updated_at  | date:"MM/dd/yyyy 'at' h:mma" }} </td>
+					<td> <a href="#/categories/{{category._id}}" class="btn btn-primary"> <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
+				 </tr>
+			 </tbody>
+		</table>
 	</div>
-	<table class="table table-striped">
-		<thead>
-			<tr>
-				<th> <input type="checkbox" ng-model="selectAll" ng-click="checkAll()"  /> </th>
-				<th> Category Name </th>
-				<th> Active </th>
-				<th> Created @ </th>
-				<th> Updated @ </th>
-				<th> </th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr ng-repeat="category in categories">
-				<td> <input type="checkbox" ng-model="category.selected" ng-click="checkIndividual()" /> </td>
-				<td> {{ category.name }} </td>
-				<td> {{ category.active | yesNo }} </td>
-				<td> {{ category.created_at | date:"MM/dd/yyyy 'at' h:mma"  }} </td>
-				<td> {{ category.updated_at  | date:"MM/dd/yyyy 'at' h:mma" }} </td>
-				<td> <a href="#/categories/{{category._id}}" class="btn btn-primary"> <!-- <i class="fa fa-pencil"></i> --> View </a>  </td>
-			 </tr>
-		 </tbody>
-	</table>
 </div>
+
 		
  <div class="container">
 	<a class="btn btn-primary" href="#/categories/add-new">
