--- a/app/frontend/views/homepage.html
+++ b/app/frontend/views/homepage.html
@@ -1,9 +1,5 @@
-<!-- <div class="container text-center">
-	<h1> {{ message }} </h1>
-</div> -->
-
-
-
-<style type="text/css">
-	
-</style>
+<div class="container">
+	<div class="jumbotron text-center">
+		 <h1> <span class="glyphicon glyphicon-fire" aria-hidden="true"></span> {{ message }} </h1>
+	</div>
+</div> 
