--- a/app/backend/templates/product.html
+++ b/app/backend/templates/product.html
@@ -173,6 +173,14 @@
 								</div>
 							</div>
 						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<div class="form-group">
+									<label for="discontinued"> Discontinued : </label>
+									<input type="checkbox" name="discontinued" id="discontinued" ng-model="product.discontinued" >
+								</div>
+							</div>
+						</div>
 					</md-content>
 				</md-tab>
 			</md-tabs>
