--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -39,7 +39,7 @@
 		</div>
 		<div class="row list" ng-show="layout == 'list'" >
 			<div class="col-md-12"  >
-				<div ng-repeat="product in productList" style="border-bottom:1px solid #eaeaea; margin:5px auto;padding:5px;">
+				<div ng-repeat="product in productList" >
 					<product-list-view></product-list-view>
 				</div>
 			</div>
