--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -6,7 +6,7 @@
 body{
 	font:15px/1.3 'Open Sans', sans-serif;
 	color: #5e5b64;
-	//text-align:center;
+	text-align:center;
 }
 
 a, a:visited {
@@ -99,27 +99,35 @@ section, footer, header, aside, nav{
 }
 .spinner img{ max-width:65px;max-height:65px; height:auto;width:auto;}
 
-.thumbnail-product{
+.product-grid-view, .product-list-view{
 	margin: 10px auto;
 	border-bottom:1px solid #eaeaea;
 	padding:5px 15px;
 } 
-.thumbnail-product:hover{
+
+.product-list-view{
+	text-align: left;
+}
+
+.product-grid-view:hover,
+.product-list-view:hover{
 	box-shadow:0px 0px 10px #9d9d9d;
 }
-.thumbnail-img-wrapper{
+.product-image-wrapper{
 	position:relative;
 	height:280px;
 	width:100%;
+	display:block;
 }
-.thumbnail-img{
-	max-width:100%;max-height:280px;width:auto;height:auto;display:block;position:absolute;left:0;top:0;right:0;bottom:0;margin:auto auto;
+.product-image{
+	max-width:100%;max-height:100%;width:auto;height:auto;display:block;position:absolute;left:0;top:0;right:0;bottom:0;margin:auto auto;
 }
+
 .price-block{ }
-.price{ margin:0 5px;}
+.price{ margin:0 5px; font-size: 16px;}
 .product-name{
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 }
-.price.regular-price.strickeout{     text-decoration: line-through; }
+.price.regular-price.strickeout{     text-decoration: line-through; opacity:0.75; font-size:14px; }
