--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -27,10 +27,10 @@
 			</div>
 		</div>
 		<div class="row grid" ng-show="layout == 'grid'" >
-			<div class="col-md-12"  >
+			<div class="col-md-12 col-sm-12 col-xs-12"  >
 				<div class="container_fluid" >
 					<div class="row">
-						<div class="col-md-3" ng-repeat="product in productList">
+						<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12" ng-repeat="product in productList">
 							<product-grid-view></product-grid-view>
 						</div>
 					</div>
