--- a/app/frontend/templates/product-grid-view.html
+++ b/app/frontend/templates/product-grid-view.html
@@ -1,5 +1,6 @@
 <section class="product-grid-view">
 	<div class="product-image-wrapper">
+		  <!-- <a href="#/products/{{activeCategory._id}}/{{product._id}}"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> --> 
 		 <a href=""> <img src="{{ product.images | smallImg }}" class="product-image" /> </a>
 	</div>
 	<p class="product-name"> <b> <a href=""> {{ product.name }} </a> </b> </p>
