--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -1,10 +1,10 @@
 <div class="container">
 	<div class="jumbotron text-center">
-		<h1> <i class="fa fa-tags"></i> {{ activeCategory }} </h1>
+		<h1> <i class="fa fa-tags"></i> {{ activeCategory.name }} </h1>
 	</div>
 </div>
-<loader></loader>
-<div id="main" ng-hide="loading">
+ <loader></loader> 
+<div id="main" ng-hide="loading" >
 	<div class="container">
 		<!-- <div class="row">
 			<div class="col-md-8"></div>
