--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -109,9 +109,11 @@ section, footer, header, aside, nav{
 	text-align: left;
 }
 
-.product-grid-view:hover,
-.product-list-view:hover{
+.product-grid-view:hover{
 	box-shadow:0px 0px 5px #9d9d9d;
+}
+.product-list-view:hover{
+	
 }
 .product-image-wrapper{
 	position:relative;
