--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -13,6 +13,8 @@
 			<p class="descritpion">
 				{{ product.short_description }}
 			</p>
+			<p><button class="btn btn-primary"> Add to Cart </button></p>
+			<p><button class="btn btn-primary"> Add to Wishlist </button></p>
 		</div>
 	</div>
 </div>
