--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -136,3 +136,21 @@ section, footer, header, aside, nav{
 		white-space: nowrap;
 }
 .price.regular-price.strickeout{     text-decoration: line-through; opacity:0.75; font-size:14px; }
+
+.thumbnail-view{
+	margin:15px auto;
+}
+
+.thumbnail-box{
+	height:85px;width:85px;border:1px solid #eaeaea;padding:5px;
+}
+.thumbnail-box > a{ display:block; width:100%;height:100%;position:relative;}
+.thumbnail-box > a img{
+	position:absolute;left:5px;top:5px;right:5px;bottom:5px;margin: auto auto;
+}
+
+
+
+.thumbnail-box img{
+	max-width:100%;max-height:100%;height:auto;width:auto;
+}
