--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -1,10 +1,10 @@
 <div class="container_fluid product-list-view">
 	<div  class="row">
-		<div  class="col-md-4">
+		<div  class="col-md-4 col-sm-4 col-xs-12">
 			<a href="#/products/{{activeCategory._id}}/{{product._id}}" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> 
 			<!-- <a href="" class="product-image-wrapper"> <img src="{{ product.images | smallImg }}" class="product-image" /> </a> -->
 		</div>
-		<div  class="col-md-8">
+		<div  class="col-md-8 col-sm-8 col-xs-12">
 			<p class="product-name"> <b> <a href="#/products/{{activeCategory._id}}/{{product._id}}"> {{ product.name }} </a> </b> </p>		
 			<p class="price-block"> 
 				<span class="price regular-price {{ product.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.price }}</span> 
