--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -154,3 +154,14 @@ section, footer, header, aside, nav{
 .thumbnail-box img{
 	max-width:100%;max-height:100%;height:auto;width:auto;
 }
+
+.slick-prev:before, .slick-next:before{
+	font-family: FontAwesome;color:#ccc;;
+}
+.slick-next:before{
+	   content: "\f061";
+}
+
+.slick-prev:before{
+	   content: "\f060";
+}
