--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -142,26 +142,20 @@ section, footer, header, aside, nav{
 }
 
 .thumbnail-box{
-	height:85px;width:85px;border:1px solid #eaeaea;padding:5px;
+	height:100%;width:100%;padding:2px;
 }
-.thumbnail-box > a{ display:block; width:100%;height:100%;position:relative;}
-.thumbnail-box > a img{
-	position:absolute;left:5px;top:5px;right:5px;bottom:5px;margin: auto auto;
-}
-
-
-
-.thumbnail-box img{
-	max-width:100%;max-height:100%;height:auto;width:auto;
+.thumbnail-box a{ display:block;width:100%;height:100%;border:1px solid #eaeaea;position:relative;}
+.thumbnail-box a img{
+	width:auto;height:auto;max-width:90%;max-height:90%;position:absolute;left:5px;right:5px;top:5px;bottom:5px;margin: auto auto;
 }
 
 .slick-prev:before, .slick-next:before{
-	font-family: FontAwesome;color:#ccc;;
+	font-family: FontAwesome;color:#b1b1b1;;
 }
 .slick-next:before{
-	   content: "\f061";
+	   content: "\f0a9";
 }
 
 .slick-prev:before{
-	   content: "\f060";
+	   content: "\f0a8";
 }
