--- a/app/frontend/views/product-listing.html
+++ b/app/frontend/views/product-listing.html
@@ -18,10 +18,12 @@
 			</div> 
 		</div> -->
 		<div class="row">
-			<div class="col-md-12">
+			
+			<div class="col-xs-12">
 				<div class="bar">
-					<a class="list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
-					<a class="grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
+					
+					<a class="view list-icon" ng-class="{active: layout == 'list'}" ng-click="layout = 'list'"></a>
+					<a class="view grid-icon" ng-class="{active: layout == 'grid'}" ng-click="layout = 'grid'"></a>
 				</div>	
 			</div>
 		</div>
@@ -46,3 +48,5 @@
 
 	</div>
 </div>
+
+
