--- a/app/frontend/views/profile.html
+++ b/app/frontend/views/profile.html
@@ -1,12 +1,13 @@
 <div class="container">
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Profile Page</h1>
-        <a href="/logout" class="btn btn-default btn-sm">Logout</a>
+        <h1><span class="fa fa-anchor"></span> Welcome {{ user.local.displayName }} - {{ user.local.email }}</h1>
+        <!-- <a href="/logout" class="btn btn-default btn-sm">Logout</a> -->
     </div>
 
-    <div class="row">
 
-        <!-- LOCAL INFORMATION -->
+    <!-- <div class="row">
+
+        
         <div class="col-sm-6">
             <div class="well">
                 <h3><span class="fa fa-user"></span> Local</h3>
@@ -20,7 +21,7 @@
             </div>
         </div>
 
-	<!-- FACEBOOK INFORMATION -->
+	
         <div class="col-sm-6">
             <div class="well">
                 <h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
@@ -35,6 +36,6 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
 </div>
