--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -4,6 +4,10 @@
 		<!-- SIGN UP FORM -->
 		<form ng-submit="signUp( user )" method="POST" role="form">
 			<div class="form-group">
+				<label> Name </label>
+				<input type="text" class="form-control" ng-model="user.displayName" name="name">
+			</div>
+			<div class="form-group">
 				<label>Email</label>
 				<input type="text" class="form-control" ng-model="user.email" name="email">
 			</div>
@@ -17,7 +21,7 @@
 
 		<hr>
 
-		<p>Already have an account? <a href="/login">Login</a></p>
+		<p>Already have an account? <a href="/#/login">Login</a></p>
 		<p>Or go <a href="/">home</a>.</p>
 
 	</div>
