--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -113,7 +113,7 @@ section, footer, header, aside, nav{
 }
 
 .product-grid-view:hover{
-	box-shadow:0px 0px 5px #9d9d9d;
+	box-shadow:0px 0px 1px #9d9d9d;
 }
 .product-list-view:hover{
 	
@@ -198,4 +198,16 @@ section, footer, header, aside, nav{
 
 .product-preview-full-mode .wrapper .close{
 	position:absolute;top:5px;right:5px;
+}
+
+.anim-grid-check{
+	opacity: 1;
+}
+
+.anim-grid-check.ng-move {
+    transition: all 0.5s ease 0s;
+    opacity: 0;
+}
+.anim-grid-check.ng-move-active {
+    opacity: 1;
 }
