--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -21,6 +21,9 @@
 		</form>
 
 		<hr>
+		        <p>Login or Register with:</p>
+
+        <a href="" class="btn btn-primary" ng-click="loginWithFB()"><span class="fa fa-facebook"></span> Facebook</a>
 
 		<p>Need an account? <a href="/#/signup">Signup</a></p>
 		<p>Or go <a href="/">home</a>.</p>
