--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -23,7 +23,9 @@
 		<hr>
 		        <p>Login or Register with:</p>
 
-        <a href="" class="btn btn-primary" ng-click="loginWithFB()"><span class="fa fa-facebook"></span> Facebook</a>
+        <!-- <a href="" class="btn btn-primary" ng-click="loginWithFB()"><span class="fa fa-facebook"></span> Facebook</a> -->
+
+		<a href="/auth/facebook" class="btn btn-primary" ><span class="fa fa-facebook"></span> Facebook</a>
 
 		<p>Need an account? <a href="/#/signup">Signup</a></p>
 		<p>Or go <a href="/">home</a>.</p>
