--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -26,6 +26,8 @@
 
 		<hr>
 
+		<a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
+
 		<p>Already have an account? <a href="/#/login">Login</a></p>
 		<p>Or go <a href="/">home</a>.</p>
 
