--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -25,7 +25,7 @@
 
         <!-- <a href="" class="btn btn-primary" ng-click="loginWithFB()"><span class="fa fa-facebook"></span> Facebook</a> -->
 
-		<a href="/auth/facebook" class="btn btn-primary" ><span class="fa fa-facebook"></span> Facebook</a>
+		<a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
 
 		<p>Need an account? <a href="/#/signup">Signup</a></p>
 		<p>Or go <a href="/">home</a>.</p>
