--- a/app/frontend/views/profile.html
+++ b/app/frontend/views/profile.html
@@ -1,14 +1,14 @@
 <div class="container">
     <div class="page-header text-center">
-        <h1><span class="fa fa-anchor"></span> Welcome {{ user.local.displayName }} - {{ user.local.email }}</h1>
+        <h1><span class="fa fa-anchor"></span> Welcome {{ user.local.displayName ||  user.facebook.name }} - {{ user.local.email || user.facebook.email }}</h1>
         <!-- <a href="/logout" class="btn btn-default btn-sm">Logout</a> -->
     </div>
 
 
-    <!-- <div class="row">
+     <div class="row">
 
         
-        <div class="col-sm-6">
+        <div class="col-sm-12" ng-show="user.local">
             <div class="well">
                 <h3><span class="fa fa-user"></span> Local</h3>
 
@@ -22,13 +22,13 @@
         </div>
 
 	
-        <div class="col-sm-6">
+        <div class="col-sm-12" ng-show="user.facebook">
             <div class="well">
                 <h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
 
                     <p>
                         <strong>id</strong>: {{ user.facebook.id }}<br>
-                        <strong>token</strong>: {{ user.facebook.token }}<br>
+                        <strong>token</strong>: <span style="display:block;overflow:hidden;">{{ user.facebook.token }}</span><br>
                         <strong>email</strong>: {{ user.facebook.email }}<br>
                         <strong>name</strong>: {{ user.facebook.name }}
                     </p>
@@ -36,6 +36,6 @@
             </div>
         </div>
 
-    </div> -->
+    </div>
 
 </div>
