--- a/app/frontend/views/profile.html
+++ b/app/frontend/views/profile.html
@@ -27,6 +27,8 @@
                 <h3 class="text-primary"><span class="fa fa-facebook"></span> Facebook</h3>
 
                     <p>
+						<img ng-src="{{ user.facebook.profilePic }}" /> <br/>
+						<!-- <strong> image </strong>: {{ user.facebook.profilePic }}<br> -->
                         <strong>id</strong>: {{ user.facebook.id }}<br>
                         <strong>token</strong>: <span style="display:block;overflow:hidden;">{{ user.facebook.token }}</span><br>
                         <strong>email</strong>: {{ user.facebook.email }}<br>
