--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -27,6 +27,8 @@
 		<hr>
 
 		<a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
+				         <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+
 
 		<p>Already have an account? <a href="/#/login">Login</a></p>
 		<p>Or go <a href="/">home</a>.</p>
