--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -22,10 +22,8 @@
 
 		<hr>
 		        <p>Login or Register with:</p>
-
-        <!-- <a href="" class="btn btn-primary" ng-click="loginWithFB()"><span class="fa fa-facebook"></span> Facebook</a> -->
-
-		<a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
+		 <a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a> 
+		         <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
 
 		<p>Need an account? <a href="/#/signup">Signup</a></p>
 		<p>Or go <a href="/">home</a>.</p>
