--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -26,9 +26,11 @@
 
 		<hr>
 
-		<a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
-				         <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+		<!-- <a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
+		<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a> -->
 
+		<button ng-click="fbSignUp()" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook </button> 
+			  <button ng-click="googleSignUp()" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
 
 		<p>Already have an account? <a href="/#/login">Login</a></p>
 		<p>Or go <a href="/">home</a>.</p>
