--- a/app/frontend/views/profile.html
+++ b/app/frontend/views/profile.html
@@ -3,10 +3,10 @@
         <h1><span class="fa fa-anchor"></span> Welcome {{ user.local.displayName ||  user.facebook.name || user.google.name }} 
 		
 		<!-- - {{ user.local.email || user.facebook.email || user.google.email }} --></h1>
-        <!-- <a href="/logout" class="btn btn-default btn-sm">Logout</a> -->
+         <!-- <a href="#/logout" ng-click="logout()" class="btn btn-default btn-sm">Logout</a>  -->
     </div>
 
-
+	<loader></loader>
      <div class="row">
 
         
