--- a/app/frontend/views/signup.html
+++ b/app/frontend/views/signup.html
@@ -26,11 +26,9 @@
 
 		<hr>
 
-		<!-- <a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a>
-		<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a> -->
-
 		<button ng-click="fbSignUp()" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook </button> 
-			  <button ng-click="googleSignUp()" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
+		<button ng-click="googleSignUp()" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
+		<button ng-click="twitterSignUp()" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter </button>
 
 		<p>Already have an account? <a href="/#/login">Login</a></p>
 		<p>Or go <a href="/">home</a>.</p>
