--- a/app/frontend/views/login.html
+++ b/app/frontend/views/login.html
@@ -22,11 +22,11 @@
 
 		<hr>
 		        <p>Login or Register with:</p>
-		 <!-- <a href="/auth/facebook" class="btn btn-primary" target="_self" ><span class="fa fa-facebook"></span> Facebook</a> --> 
-		<!-- <a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a> -->
 
 			  <button ng-click="fbLogin()" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook </button> 
 			  <button ng-click="googleLogin()" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</button>
+			  <button ng-click="twitterLogin()" class="btn btn-info"><span class="fa fa-twitter"></span> Twitter </button>
+
 		<p>Need an account? <a href="/#/signup">Signup</a></p>
 		<p>Or go <a href="/">home</a>.</p>
 
