--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -196,8 +196,9 @@ section, footer, header, aside, nav{
 	overflow:hidden;
 }
 
+
 .product-preview-full-mode .wrapper .close{
-	position:absolute;top:5px;right:5px;
+	position:absolute;top:5px;right:5px;z-index:2;
 }
 
 .anim-grid-check{
