--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -12,13 +12,13 @@
 	
 				<div data="product.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}" slider-product-view >
 					<div class="product-image-wrapper" ng-repeat="image in product.images" on-finish-render-filters>
-						<a href="" > <img ng-src="{{ image.url }}" class="product-image" /> </a>
+						<a href="#/products/{{activeCategory._id}}/{{product._id}}/fullmode" > <img ng-src="{{ image.url }}" class="product-image"  /> </a>
 					</div>
 				</div>
 
 				<!-- <h1>activeSlide : {{ activeSlide }}</h1>  -->
 
-				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:4, slidesToScroll:4, infinite:false}" auto-slide-thumb >
+				 <div class="thumbnail-view clearfix" data="product.images" slick-slider="{dots: false, arrows: true, draggable: false, slidesToShow:4, slidesToScroll:4, infinite:false, responsive: [{ breakpoint: 1170, settings: { slidesToShow: 4, slidesToScroll: 4 } }, { breakpoint: 992, settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 768,  settings: { slidesToShow: 3, slidesToScroll: 3 } }, { breakpoint: 480, settings: { slidesToShow: 1,  slidesToScroll: 1 } } ] }" auto-slide-thumb >
 					<div class="product-wrapper" ng-repeat="image in product.images" >
 						<div class="thumbnail-box">
 							<a href="" class="{{ activeSlide === $index?'active':''}}" ng-click="switchThumbView( $index )" ><img ng-src="{{ image.url }}" /></a>
@@ -50,24 +50,21 @@
 		<a href="#/products/{{activeCategory._id}}/" class="pull-right"> Go Back </a>
 	</div>
 
-	<div class="product-preview-full-mode" ng-show="enableFullmode" >
-		<div class="wrapper">
-			<button class="close" ng-click="enableFullmode = false" > <i class="fa fa-times"></i> </button>
-			<div id="" class="container">
-				<div id="" class="row">
-					<div id="" class="col-sm-3">
-						
-					</div>
-					<div id="" class="col-sm-9">
-						<div data="product.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}" slider-product-view >
-							<div class="product-image-wrapper" ng-repeat="image in product.images" >
-								<a href="" ng-click="setFullPreviewMode()" > <img ng-src="{{ image.url }}" class="product-image" /> </a>
-							</div>
+	<!-- <div class="product-preview-full-mode" ng-show="enableFullmode" >
+		<div  class="container">
+			<div  class="row">
+				<div  class="col-sm-12">
+					<div class="wrapper">
+						<button class="close" ng-click="enableFullmode = false" > <i class="fa fa-times"></i> </button>
+							<div data="product.images" slick-slider="{dots: false, arrows: false, draggable: true, slidesToShow:1, infinite:false}"  >
+								<div ng-repeat="image in product.images" >
+									<img ng-src="{{ image.url }}"  />
+								</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 </div>
