--- a/app/frontend/templates/product-list-view.html
+++ b/app/frontend/templates/product-list-view.html
@@ -13,8 +13,10 @@
 			<p class="descritpion">
 				{{ product.short_description }}
 			</p>
-			<p><button class="btn btn-primary"> Add to Cart </button></p>
-			<p><button class="btn btn-primary"> Add to Wishlist </button></p>
+			<p>
+				<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i> Add To Cart </button> 
+				<button class="btn btn-primary"><i class="fa fa-heart"></i> Add To Wishlist </button>
+			</p>
 		</div>
 	</div>
 </div>
