--- a/app/frontend/assets/stylesheets/style.css
+++ b/app/frontend/assets/stylesheets/style.css
@@ -185,22 +185,6 @@ section, footer, header, aside, nav{
 	   content: "\f0a8";
 }
 
-.product-preview-full-mode{
-	width:100%;height:100%;
-	background:#fff;position:fixed;left:0;top:0;
-}
-
-.product-preview-full-mode .wrapper{
-	position:relative;
-	width:100%;height:100%;
-	overflow:hidden;
-}
-
-
-.product-preview-full-mode .wrapper .close{
-	position:absolute;top:5px;right:5px;z-index:2;
-}
-
 .anim-grid-check{
 	opacity: 1;
 }
@@ -211,4 +195,33 @@ section, footer, header, aside, nav{
 }
 .anim-grid-check.ng-move-active {
     opacity: 1;
+}
+
+
+.full-mode-preview .product-image-wrapper{
+	width:100%;position:relative;
+}
+.full-mode-preview .product-image-wrapper .product-image{
+	position:absolute;left:0;top:0;right:0;bottom:0;margin: auto auto;max-width:100%;max-height:100%;height:auto;width:auto;	
+}
+
+@media screen and (min-device-width: 480px ){
+	.full-mode-preview .product-image-wrapper{
+		height:320px;
+	}
+}
+@media screen and (min-device-width: 768px ){
+	.full-mode-preview .product-image-wrapper{
+		height:480px;
+	}
+}
+@media screen and (min-device-width: 992px ){
+	.full-mode-preview .product-image-wrapper{
+		height:768px;
+	}
+}
+@media screen and (min-device-width: 1171px ){
+	.full-mode-preview .product-image-wrapper{
+		height:992px;
+	}
 }
