--- a/app/frontend/templates/product-grid-view.html
+++ b/app/frontend/templates/product-grid-view.html
@@ -7,6 +7,8 @@
 	<p class="price-block"> 
 		<span class="price regular-price {{ product.special_price > 0? 'strickeout':'' }}"><i class="fa fa-inr"></i>{{ product.price }}</span> 
 		<span class="price special-price" ng-show="product.special_price > 0"><i class="fa fa-inr"></i>{{ product.special_price }}</span> 
-	</p>
+		<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i>  Add To Cart </button>
+		<!-- <button class="btn btn-primary"><i class="fa fa-heart"></i> </button>
+ -->	</p>
 </section>
 
