--- a/app/frontend/views/product-details.html
+++ b/app/frontend/views/product-details.html
@@ -39,8 +39,11 @@
 					{{ product.description }}
 				</p>
 
-				<p><button class="btn btn-primary"> Add to Cart </button></p>
-				<p><button class="btn btn-primary"> Add to Wishlist </button></p>
+				<p>
+					<button class="btn btn-primary"> <i class="fa fa-shopping-cart"></i> Add To Cart </button> 
+					<button class="btn btn-primary"><i class="fa fa-heart"></i> Add To Wishlist </button>
+					<button class="btn btn-primary"><i class="fa fa-signal"></i> Add To Compare </button>
+				</p>
 				
 				
 			</div>
